# sirius_spaced_repetition

./: .gitignore  CLAUDE.md  pyproject.toml
configs/: default_process.yaml  secrets_example.yaml
configs/clusterer/: hdbscan.yaml
configs/clustering_preprocessing/: none.yaml  umap.yaml
configs/encoder/: contextual.yaml  sentence_transformer.yaml
configs/extractor/: claude_api.yaml  claude_code.yaml  local_llm.yaml  passthrough.yaml
configs/graph_creator/: claude_api.yaml  local_llm.yaml  none.yaml  passthrough.yaml
configs/highlight_parser/: readwise_api.yaml  readwise_markdown.yaml
configs/pipeline/: default.yaml
examples/: Flashcards - How We Learn - Benedict Carey.md  How We Learn - Benedict Carey.canvas  How We Learn - Benedict Carey.md
experiments/1-baseline/: process_highlights.py
experiments/2-full-highlights/: process_highlights.py
experiments/3-knowledge-graph-creation/: process_highlights.py
experiments/4-contextual-embeddings/: process_highlights.py
experiments/5-UMAP/: process_highlights.py
plans/: clustering_plan.md  graph_creation_plan.md  project_overview.md
plans/contextual_embeddings/: contextual_embeddings_spec.md
plans/umap/: umap_spec.md  umap_visualization.md
src/sirius/: __init__.py  clusterers.py  clustering.py  clustering_preprocessors.py  encoders.py  extractors.py  graph_creators.py  highlight_parsers.py  pipeline.py  protocols.py  visualization.py
src/sirius/utils/: cluster_viz.py  hydra_utils.py  logging.py
src/sirius_srs/: clusterers.py  clustering.py  encoders.py  extractors.py  protocols.py
tests/: conftest.py  test_clusterers.py  test_clustering.py  test_encoders.py  test_extractors.py  test_graph_creators.py  test_highlight_parsers.py  test_highlight_parsers_integration.py  test_integration.py  test_pipeline.py
