[project]
name = "sirius_srs"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "sentence-transformers",
    "scikit-learn>=1.3",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sirius_srs"]

# Use CPU-only PyTorch to avoid downloading multi-GB CUDA packages.
# sentence-transformers depends on torch; this pins it to the lightweight CPU build.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
